log
Fri Apr 22 15:30:55 UTC 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
29e171f
Fri Apr 22 15:44:55 UTC 2022: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
030d9a5
Fri Apr 22 15:57:54 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
e99de0f
Fri Apr 22 16:07:49 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
7007960
Fri Apr 22 16:21:11 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
31bc4cc
Sun Apr 24 19:10:04 UTC 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
ef7c7bb
Sun Apr 24 20:27:48 UTC 2022: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
     treeNode aux = tree->current->right;
     ^~~~~~~~
     TreeNode
treemap.c:105:20: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     treeNode aux = tree->current->right;
                    ^~~~
treemap.c:106:14: error: invalid type argument of ‘->’ (have ‘int’)
     while(aux->left != NULL){
              ^~
treemap.c:107:16: error: invalid type argument of ‘->’ (have ‘int’)
       aux = aux->left;
                ^~
treemap.c:109:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     tree->current = aux;
                   ^
treemap.c:110:15: error: invalid type argument of ‘->’ (have ‘int’)
     return aux->pair;
               ^~
treemap.c:112:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
     treeNode aux = tree->current->parent;
     ^~~~~~~~
     TreeNode
treemap.c:112:20: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     treeNode aux = tree->current->parent;
                    ^~~~
treemap.c:113:16: error: comparison between pointer and integer [-Werror]
     while (aux < tree->current){
                ^
treemap.c:114:16: error: invalid type argument of ‘->’ (have ‘int’)
       aux = aux->parent;
                ^~
treemap.c:116:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     tree->current = aux;
                   ^
treemap.c:117:15: error: invalid type argument of ‘->’ (have ‘int’)
     return aux->pair;
               ^~
treemap.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
6d62241
Sun Apr 24 20:28:12 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:105:20: error: invalid initializer
     TreeNode aux = tree->current->right;
                    ^~~~
treemap.c:106:14: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     while(aux->left != NULL){
              ^~
treemap.c:107:16: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux = aux->left;
                ^~
treemap.c:109:19: error: incompatible types when assigning to type ‘TreeNode * {aka struct TreeNode *}’ from type ‘TreeNode {aka struct TreeNode}’
     tree->current = aux;
                   ^
treemap.c:110:15: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     return aux->pair;
               ^~
treemap.c:112:20: error: invalid initializer
     TreeNode aux = tree->current->parent;
                    ^~~~
treemap.c:113:16: error: invalid operands to binary < (have ‘TreeNode {aka struct TreeNode}’ and ‘TreeNode * {aka struct TreeNode *}’)
     while (aux < tree->current){
                ^ ~~~~~~~~~~~~~
treemap.c:114:16: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux = aux->parent;
                ^~
treemap.c:116:19: error: incompatible types when assigning to type ‘TreeNode * {aka struct TreeNode *}’ from type ‘TreeNode {aka struct TreeNode}’
     tree->current = aux;
                   ^
treemap.c:117:15: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     return aux->pair;
               ^~
treemap.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
624a661
Sun Apr 24 20:32:12 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ac20ff8
Sun Apr 24 20:32:59 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fab4cfc
Sun Apr 24 20:51:35 UTC 2022: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
0c7a207
